syntax = "proto3";

message Merchant {
    enum Env {
        SANDBOX    = 0;
        PRODUCTION = 1;
    }

    string access_key = 1;
    string secret_key = 2;
    string vanity_url = 3;
       Env env        = 4;
}

message Address {
    string street1  = 1;
    string street2  = 2;
    string city     = 3;
    string state    = 4;
    string country  = 5;
    string pincode  = 6;
}

message User {
     string fname   = 1;
     string lname   = 2;
     string email   = 3;
     string mobile  = 4; // 10-digit
    Address address = 5;
}

message Card {
    enum Type {
        CREDIT = 0;
        DEBIT  = 1;
    }

    enum Scheme {
        VISA       = 0;
        MASTERCARD = 1;
        MAESTRO    = 2;
        AMEX       = 3;
        DINERS     = 4;
        RUPAY      = 5;
    }

      Type type         =  1;
    Scheme scheme       =  2;
    string number       =  3;
    uint32 expiry_month =  4;
    uint32 expiry_year  =  5;
    string cvv          =  6;
    string owner_name   =  7;
    string citrus_token =  8;
    string citrus_name  =  9;
    string citrus_mmid  = 10;
    string owner_mobile = 11; // 10-digit
}

message Bank {
    string name = 1;
    string code = 2;
}

message CustomParam {
    string name  = 1;
    string value = 2;
}

message Transaction {
    string id                          = 1;
    string currency                    = 2;
    double amount                      = 3;
    string signature                   = 4;
    string return_url                  = 5;
    string notify_url                  = 6;
    repeated CustomParam custom_params = 7;
}

message PaymentMethods {
    repeated Bank banks        = 1;
    repeated Card credit_cards = 2;
    repeated Card debit_cards  = 3;
}